# Snake-Game-C-

./: .clangd  .gitignore  CMakeLists.txt  Makefile  main.cpp  snake_game.depend  snake_game.layout
compile_comands/: json
include/: boxcollision.h  game.h
src/: game.cpp  main.cpp
test/: run_valgrind.zsh
